# legesher-translations

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  .pre-commit.yaml  .unibeautifyrc.json  .unibeautifyrc.yml  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE.md  README.md  de.yaml  fr.yaml  package-lock.json  package.json  pl.yml  pyproject.toml  server.js
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  config.yml  lock.yml  no-response.yml  stale.yml
.github/ISSUE_TEMPLATE/: --add-new-language.md  --review-language.md  ADD_DIALECT.md  ADD_LANGUAGE.md  BUG_REPORT.md  FEATURE_REQUEST.md  REVIEW_DIALECT.md  REVIEW_LANGUAGE.md
app/routes/: index.js  translation-routes.js
config/: dialects.json  keywords.json  programming-languages.json  spoken-languages.json
docs/review-history/: README.md  german.md  spanish.md
legesher_translations/locale/: dialect-list.yml  en.yml  language-keyword-template.yml
locale/: ar.yml  az.yml  bn.yml  cy.yml  da.yml  de.yaml  dialect-list.yml  el.yml  en.yml  es.yml  fi.yml  fr.yml  ga.yml  gu.yml  he.yml  hi.yml  hin.yml  id.yml  it.yml  ko.yml  language-keyword-template.yml  ml.yml  ne.yml  nl.yml  pl.yml  pt.yml  ro.yml  ru.yml  sw.yml  te.yml  tl.yml  tr.yml  uk.yml  ur.yml  xh.yml  zh.yml
