[tool.poetry]
name = "legesher-translations"
version = "0.0.1"
description = "Home of all the translations for spoken languages into programming language"
repository = "https://github.com/legesher/legesher-translations"
authors = ["Madison (Pfaff) Edgar <7844510+madiedgar@users.noreply.github.com>"]
packages = [{include = "legesher_translations}]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
pytest = "^8.1.1"
flake8 = "^7.0.0"
pre-commit = "^3.6.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
